# tasktual

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
libtasktual/: __init__.py  lib.py
